// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider it should pass in a custom prop 1`] = `
<hr
  className="divider"
  id="testDivider"
/>
`;

exports[`Divider should render a basic component 1`] = `
<hr
  className="divider"
/>
`;
